--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.2",
     "@clerk/nextjs": "^6.36.5",
     "@clerk/themes": "^2.4.46",
     "@radix-ui/react-avatar": "^1.1.11",
